--- a/src/styles/_mixins.sass
+++ b/src/styles/_mixins.sass
@@ -13,14 +13,14 @@
  *
  *  @include responsive-font(5vw, 35px, 150px, 50px);
 =responsive-font($responsive, $min, $max: false, $fallback: false)
-  $responsive-unitless: $responsive / ($responsive - $responsive + 1)
+  $responsive_unitless: $responsive / ($responsive - $responsive + 1)
   $dimension: if(unit($responsive) == "vh", "height", "width")
-  $min-breakpoint: $min / $responsive-unitless * 100
-  @media (max-#{$dimension}: #{$min-breakpoint})
+  $min_breakpoint: $min / $responsive_unitless * 100
+  @media (max-#{$dimension}: #{$min_breakpoint})
     font-size: $min
   @if $max
-    $max-breakpoint: $max / $responsive-unitless * 100
-    @media (min-#{$dimension}: #{$max-breakpoint})
+    $max_breakpoint: $max / $responsive_unitless * 100
+    @media (min-#{$dimension}: #{$max_breakpoint})
       font-size: $max
   @if $fallback
     font-size: $fallback
