--- a/src/styles/_spacing.sass
+++ b/src/styles/_spacing.sass
@@ -1,7 +1,7 @@
 /* VUE DESIGN SYSTEM SPACING HELPERS
  *---------------------------------------------
 
-$spacing-ratio: 1.7
+$spacing_ratio: 1.7
 
 /*
  *INSET-SPACE: For interface containers.
@@ -19,7 +19,7 @@ $spacing-ratio: 1.7
 //
 // @param  {Number} inset-squish-space to set
 =inset-squish-space($value)
-  padding: round($value / $spacing-ratio - 1px) $value round($value / $spacing-ratio)
+  padding: round($value / $spacing_ratio - 1px) $value round($value / $spacing_ratio)
 
 // Create stack-space
 //
