--- a/src/styles/modules/_m-accordion.sass
+++ b/src/styles/modules/_m-accordion.sass
@@ -12,15 +12,15 @@
       font-weight: $font_weight_light
 
       div.content
-        padding: $space-xxs 0 $space-xxs
+        padding: $space_xxs 0 $space_xxs
 
   div.header
     display: flex
     font-weight: $font_weight_bold
     font-size: $font_size_m
     line-height: $line_height_m
-    color: $color-primary
-    margin-bottom: $space-xxs
+    color: $color_primary
+    margin-bottom: $space_xxs
     cursor: pointer
 
     &.open
@@ -29,7 +29,7 @@
         transform: rotate(-180deg)
 
     svg
-      margin-right: $space-xxs
+      margin-right: $space_xxs
       transition: transform .5s
 
   div.main
@@ -37,4 +37,4 @@
     font-weight: $font_weight_light
 
     div.content
-      padding-bottom: $space-s
+      padding-bottom: $space_s
