--- a/src/styles/modules/_m-banner.sass
+++ b/src/styles/modules/_m-banner.sass
@@ -20,9 +20,9 @@
         cursor: pointer
         z-index: 1100
         position: absolute
-        top: $space-xxs
-        right: $space-xxs
-        padding: $space-xxs
+        top: $space_xxs
+        right: $space_xxs
+        padding: $space_xxs
         transition: all .5s cubic-bezier(.23,1,.32,1)
 
     +e('close-svg')
