--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -63,14 +63,14 @@
       +reset
       height: 100%
       width: 100%
-      margin-bottom: $space-xxxs
+      margin-bottom: $space_xxxs
 
 +b(checkbox-group)
   display: grid
   padding: 0
   width: 100%
   list-style-type: none
-  +rem-fallback('row-gap', $space-s)
+  +rem-fallback('row-gap', $space_s)
 
   +e('label')
     font-weight: $font_weight_light
