--- a/src/styles/modules/_m-modal-back.sass
+++ b/src/styles/modules/_m-modal-back.sass
@@ -1,8 +1,8 @@
 .back
   position: absolute
   top: 7px
-  left: $space-s
+  left: $space_s
 
   +breakpoint(tablet-wide)
     top: 25px
-    left: $space-xxl
+    left: $space_xxl
