--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -1,20 +1,20 @@
 +b(npa-signup-search-filters)
   +e(container)
     display: grid
-    +rem-fallback('grid-row-gap', $space-s)
+    +rem-fallback('grid-row-gap', $space_s)
     grid-template-columns: 100%
 
     +breakpoint(tablet-wide)
       grid-template-columns: 49% 48%
-      +rem-fallback('grid-column-gap', $space-m)
+      +rem-fallback('grid-column-gap', $space_m)
 
   +e(title)
     +breakpoint(tablet-wide)
       text-align: center
 
   +e(save-close)
-    +rem-fallback('margin', 30px 0 $space-s)
+    +rem-fallback('margin', 30px 0 $space_s)
 
     +breakpoint(tablet-wide)
       +rem-fallback('width', 367px)
-      +rem-fallback('margin', $space-xl auto)
+      +rem-fallback('margin', $space_xl auto)
