--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -2,7 +2,7 @@
   font-size: $font_size_xxs
 
   +e('link-blue')
-    color: $color-primary
+    color: $color_primary
     cursor: pointer
     &:hover
       text-decoration: underline
@@ -15,7 +15,7 @@
       transition: all .3s ease-in-out
       width: .6875rem
       height: .6875rem
-      fill: $color-primary
+      fill: $color_primary
 
     +is('expanded')
       svg
@@ -25,9 +25,9 @@
       display: none
 
   +e('all-offers')
-    +rem-fallback(padding, $space-s)
+    +rem-fallback(padding, $space_s)
     font-weight: $font_weight_light
-    background: $color-gray
+    background: $color_gray
 
     a
       font-weight: $font_weight_normal
