--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -12,7 +12,7 @@
     .pages
       width: 186px
       position: relative
-      font-size: $space-s
+      font-size: $space_s
       font-weight: $font_weight_light
       line-height: 26px
       cursor: pointer
@@ -44,8 +44,8 @@
               font-weight: $font_weight_bold
 
           .periodic-icon
-            fill: $color-primary
+            fill: $color_primary
             margin-left: 1em
 
             &.active
-              color: $color-primary
+              color: $color_primary
