--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -3,7 +3,7 @@ $sizes: ( xxs: $font_size_xxs, xs: $font_size_xs, s: $font_size_s, m: $font_size
 +b('paragraph')
   letter-spacing: $letter_spacing_default
   font-weight: $font_weight_normal
-  margin-bottom: $space-s
+  margin-bottom: $space_s
 
   a
     font-weight: $font_weight_bold
@@ -13,16 +13,16 @@ $sizes: ( xxs: $font_size_xxs, xs: $font_size_xs, s: $font_size_s, m: $font_size
       +rem-fallback('font-size', $token)
 
   +m('color-gray')
-    color: $color-gray
+    color: $color_gray
 
   +m('color-gray-light')
     color: $color_gray_light
 
   +m('color-blue')
-    color: $color-primary
+    color: $color_primary
 
   +m('family-special')
-    font-family: $font-special
+    font-family: $font_special
 
   +m('weight-light')
     font-weight: $font_weight_light
