--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -2,7 +2,7 @@
   background: $color_gray_lighter
   border-radius: $radius_l
   box-shadow: 0 0 4px #b3b3b3
-  padding: $space-xxs
+  padding: $space_xxs
   display: grid
   grid-template-columns: 124px auto
 
@@ -25,7 +25,7 @@
       right: 0
       border-bottom-left-radius: $radius_l
       border-bottom-right-radius: $radius_l
-      color: $color-white
+      color: $color_white
       text-align: center
       font-size: $font_size_xs
       display: flex
@@ -38,10 +38,10 @@
         background: #FF8F43
 
       &.blue
-        background: $color-primary
+        background: $color_primary
 
   div.content
-    margin-left: $space-xs
+    margin-left: $space_xs
     position: relative
     top: 0
     white-space: nowrap
