--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -1,11 +1,11 @@
 +b(search-form)
-  padding: $space-m
-  background: $color-gray
+  padding: $space_m
+  background: $color_gray
   border-radius: $radius_l
-  border-top: 10px solid $color-primary
+  border-top: 10px solid $color_primary
 
   h3
-    margin-bottom: $space-xxxxs
+    margin-bottom: $space_xxxxs
 
   nav
     display: flex
@@ -15,7 +15,7 @@
       display: inline-block
       text-align: center
       cursor: pointer
-      padding: $space-xxs
+      padding: $space_xxs
       font-size: $font_size_s
       font-family: $font
       font-weight: $font_weight_bold
@@ -28,11 +28,11 @@
         transition: width .25s
 
       &:hover
-        color: $color-primary
+        color: $color_primary
 
         div.underline
           width: 100%
-          background: $color-primary
+          background: $color_primary
 
       &.active
         color: #008bb8
@@ -43,8 +43,8 @@
 
   section
 
-    .#{$prefix-component}text-field__container, .#{$prefix-component}checkbox
+    .#{$prefix_component}text-field__container, .#{$prefix_component}checkbox
       margin-bottom: 10px
 
   button.submit
-    margin-top: $space-s
+    margin-top: $space_s
