--- a/src/styles/modules/_m-table-of-contents.sass
+++ b/src/styles/modules/_m-table-of-contents.sass
@@ -14,9 +14,9 @@
       font-weight: $font_weight_light
       padding: 15px 0
 
-    .#{$prefix-component}textlink
-      color: $color-black
+    .#{$prefix_component}textlink
+      color: $color_black
 
       &:hover
-        color: $color-primary
+        color: $color_primary
         text-decoration: none
