--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,7 +1,7 @@
 
 // Styles here will be applied to every periodic component. Treat this like you
 // would with the main `body...}` style in a normal app.
-.#{$prefix-component}#{$periodic_component_class}
+.#{$prefix_component}#{$periodic_component_class}
     margin: 0
     padding: 0
     font-family: $font
@@ -14,7 +14,7 @@
 // This will override some of the above styles, and is only applied to components
 // that opt in to using it. It's needed because inheriting is useful--sometimes
 // actually very necessary--for some text components.
-.#{$prefix-component}#{$periodic_text_inherit_class}
+.#{$prefix_component}#{$periodic_text_inherit_class}
     font-family: inherit
     font-weight: inherit
     font-size: inherit
