--- a/src/styles/legacy/_tools/_mixins.scss
+++ b/src/styles/legacy/_tools/_mixins.scss
@@ -2,71 +2,71 @@
 
 // Mixins For Headings
 
-@mixin heading($h-heading) {
-  @if $h-heading == "h5-heading" {
+@mixin heading($h_heading) {
+  @if $h_heading == "h5-heading" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
   }
-  @if $h-heading == "h5-museo" {
+  @if $h_heading == "h5-museo" {
     font-family: $font;
     font-size: $font_size_s;
     font-weight: $font_weight_bold;
   }
-  @if $h-heading == "h6-heading" {
+  @if $h_heading == "h6-heading" {
     font-family: $font;
     font-weight: $font_weight_bold;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 22px);
   }
-  @if $h-heading == "h6-museo" {
+  @if $h_heading == "h6-museo" {
     font-family: $font;
     font-weight: $font_weight_bold;
     font-size: $font_size_xs;
   }
-  @if $h-heading == "h1-museo" {
+  @if $h_heading == "h1-museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xxl;
     line-height: 1.37;
     @include rem-fallback("letter-spacing", -1px);
   }
-  @if $h-heading == "h2-museo" {
+  @if $h_heading == "h2-museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xl;
     line-height: 1.5;
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h4__heading-h4--bold" {
+  @if $h_heading == "h4__heading-h4--bold" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 32px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h4__heading-h4--bold-h4--compact" {
+  @if $h_heading == "h4__heading-h4--bold-h4--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h4__heading-h4--bold-h4--x-compact" {
+  @if $h_heading == "h4__heading-h4--bold-h4--x-compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 24px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h4__heading-h4--light-h4--compact" {
+  @if $h_heading == "h4__heading-h4--light-h4--compact" {
     font-family: $helvetica;
     color: $color_gray_darker;
     font-weight: $font_weight_light;
@@ -74,7 +74,7 @@
     @include rem-fallback("line-height", 26px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h4__heading-h4--light-h4--x-compact" {
+  @if $h_heading == "h4__heading-h4--light-h4--x-compact" {
     font-family: $helvetica;
     color: $color_gray_darker;
     font-weight: $font_weight_light;
@@ -82,39 +82,39 @@
     @include rem-fallback("line-height", 24px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading" {
+  @if $h_heading == "h5__heading" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--museo" {
+  @if $h_heading == "h5__heading-h5--museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--museo-h5--x-compact" {
+  @if $h_heading == "h5__heading-h5--museo-h5--x-compact" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_s;
     @include rem-fallback("line-height", 18px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--light-h5--compact" {
+  @if $h_heading == "h5__heading-h5--light-h5--compact" {
     font-family: $helvetica;
     color: $color_gray_darker;
     font-weight: $font_weight_light;
     font-size: $font_size_s;
-    @include rem-fallback("line-height", $space-s);
+    @include rem-fallback("line-height", $space_s);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--light" {
+  @if $h_heading == "h5__heading-h5--light" {
     font-family: $helvetica;
     color: $color_gray_darker;
     font-weight: $font_weight_light;
@@ -122,95 +122,95 @@
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h4__heading-h4--compact" {
+  @if $h_heading == "h4__heading-h4--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h4__heading-h4--x-compact" {
+  @if $h_heading == "h4__heading-h4--x-compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 24px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h5__heading-h5--compact" {
+  @if $h_heading == "h5__heading-h5--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_s;
-    @include rem-fallback("line-height", $space-s);
+    @include rem-fallback("line-height", $space_s);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--bold-h5--compact" {
+  @if $h_heading == "h5__heading-h5--bold-h5--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_s;
-    @include rem-fallback("line-height", $space-s);
+    @include rem-fallback("line-height", $space_s);
     letter-spacing: 0;
   }
-  @if $h-heading == "h5__heading-h5--bold" {
+  @if $h_heading == "h5__heading-h5--bold" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h1__heading-h1--museo" {
+  @if $h_heading == "h1__heading-h1--museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xxl;
     @include rem-fallback("line-height", 62px);
     @include rem-fallback("letter-spacing", -1px);
   }
-  @if $h-heading == "h2__heading-h2--museo" {
+  @if $h_heading == "h2__heading-h2--museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xl;
     @include rem-fallback("line-height", 48px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h3__heading-h3--museo" {
+  @if $h_heading == "h3__heading-h3--museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_l;
     @include rem-fallback("line-height", 39px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h3__heading-h3--bold" {
+  @if $h_heading == "h3__heading-h3--bold" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_l;
     @include rem-fallback("line-height", 39px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h3__heading-h3--museo-h3--x-compact" {
+  @if $h_heading == "h3__heading-h3--museo-h3--x-compact" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_l;
     @include rem-fallback("line-height", 30px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h3__heading-h3--bold-h3--compact" {
+  @if $h_heading == "h3__heading-h3--bold-h3--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_l;
     @include rem-fallback("line-height", 31px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
-  @if $h-heading == "h6__heading-h6--light-h6--compact" {
+  @if $h_heading == "h6__heading-h6--light-h6--compact" {
     font-family: $helvetica;
     color: $color_gray_darker;
     font-weight: $font_weight_light;
@@ -218,53 +218,53 @@
     @include rem-fallback("line-height", 17px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h6__heading-h6--compact" {
+  @if $h_heading == "h6__heading-h6--compact" {
     font-family: $helvetica;
     font-weight: $font_weight_normal;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 17px);
   }
-  @if $h-heading == "h6__heading-h6--museo-h6--compact" {
+  @if $h_heading == "h6__heading-h6--museo-h6--compact" {
     font-family: $font;
     font-weight: $font_weight_normal;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 17px);
   }
-  @if $h-heading == "h6__heading-h6--bold" {
+  @if $h_heading == "h6__heading-h6--bold" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 22px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h6__heading-h6--bold-h6--compact" {
+  @if $h_heading == "h6__heading-h6--bold-h6--compact" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 17px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h6__heading" {
+  @if $h_heading == "h6__heading" {
     font-family: $helvetica;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_xs;
     @include rem-fallback("line-height", 22px);
     letter-spacing: 0;
   }
-  @if $h-heading == "h4__heading-h4--museo-h4--compact" {
+  @if $h_heading == "h4__heading-h4--museo-h4--compact" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_bold;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
-  @if $h-heading == "h4__heading-h4--museo" {
+  @if $h_heading == "h4__heading-h4--museo" {
     font-family: $font;
-    color: $color-black;
+    color: $color_black;
     font-weight: $font_weight_normal;
     font-size: $font_size_m;
     @include rem-fallback("line-height", 32px);
@@ -274,72 +274,72 @@
 
 // Mixins For Margin Spacing
 
-@mixin margin-space($m-space) {
-  @if $m-space == "tiny" {
+@mixin margin-space($m_space) {
+  @if $m_space == "tiny" {
     @include rem-fallback("margin", 0 0 10px);
-  } @else if $m-space == "x-small" {
+  } @else if $m_space == "x-small" {
     @include rem-fallback("margin", 0 0 15px);
-  } @else if $m-space == "small" {
-    @include rem-fallback("margin", 0 0 $space-s);
-  } @else if $m-space == "medium" {
+  } @else if $m_space == "small" {
+    @include rem-fallback("margin", 0 0 $space_s);
+  } @else if $m_space == "medium" {
     @include rem-fallback("margin", 0 0 40px);
-  } @else if $m-space == "big" {
+  } @else if $m_space == "big" {
     @include rem-fallback("margin", 0 0 60px);
-  } @else if $m-space == "large" {
+  } @else if $m_space == "large" {
     @include rem-fallback("margin", 0 0 80px);
-  } @else if $m-space == "t-medium" {
+  } @else if $m_space == "t-medium" {
     @include rem-fallback("margin", 40px 0 0);
-  } @else if $m-space == "tb-medium" {
+  } @else if $m_space == "tb-medium" {
     @include rem-fallback("margin", 40px 0);
-  } @else if $m-space == "tb-small" {
-    @include rem-fallback("margin", $space-s 0);
-  } @else if $m-space == "tb-tiny" {
+  } @else if $m_space == "tb-small" {
+    @include rem-fallback("margin", $space_s 0);
+  } @else if $m_space == "tb-tiny" {
     @include rem-fallback("margin", 10px 0);
-  } @else if $m-space == "tb-x-tiny" {
+  } @else if $m_space == "tb-x-tiny" {
     @include rem-fallback("margin", 5px 0);
-  } @else if $m-space == "r-tiny" {
+  } @else if $m_space == "r-tiny" {
     @include rem-fallback("margin", 0 10px 0 0);
-  } @else if $m-space == "r-medium" {
+  } @else if $m_space == "r-medium" {
     @include rem-fallback("margin", 0 40px 0 0);
-  } @else if $m-space == "l-tiny" {
+  } @else if $m_space == "l-tiny" {
     @include rem-fallback("margin", 0 0 0 10px);
-  } @else if $m-space == "l-medium" {
+  } @else if $m_space == "l-medium" {
     @include rem-fallback("margin", 0 0 0 40px);
-  } @else if $m-space == "pet-card-big" {
+  } @else if $m_space == "pet-card-big" {
     @include rem-fallback("margin", 10px 10px 15px 10px);
   }
 }
 
 // Mixins For Padding Spacing
 
-@mixin padding-space($p-space) {
-  @if $p-space == "tiny" {
+@mixin padding-space($p_space) {
+  @if $p_space == "tiny" {
     @include rem-fallback("padding", 0 0 10px);
-  } @else if $p-space == "x-small" {
+  } @else if $p_space == "x-small" {
     @include rem-fallback("padding", 0 0 15px);
-  } @else if $p-space == "small" {
-    @include rem-fallback("padding", 0 0 $space-s);
-  } @else if $p-space == "medium" {
+  } @else if $p_space == "small" {
+    @include rem-fallback("padding", 0 0 $space_s);
+  } @else if $p_space == "medium" {
     @include rem-fallback("padding", 0 0 40px);
-  } @else if $p-space == "big" {
+  } @else if $p_space == "big" {
     @include rem-fallback("padding", 0 0 60px);
-  } @else if $p-space == "large" {
+  } @else if $p_space == "large" {
     @include rem-fallback("padding", 0 0 80px);
-  } @else if $p-space == "t-medium" {
+  } @else if $p_space == "t-medium" {
     @include rem-fallback("padding", 40px 0 0);
-  } @else if $p-space == "t-small" {
-    @include rem-fallback("padding", $space-s 0 0);
-  } @else if $p-space == "tb-medium" {
+  } @else if $p_space == "t-small" {
+    @include rem-fallback("padding", $space_s 0 0);
+  } @else if $p_space == "tb-medium" {
     @include rem-fallback("padding", 40px 0);
-  } @else if $p-space == "r-tiny" {
+  } @else if $p_space == "r-tiny" {
     @include rem-fallback("padding", 0 10px 0 0);
-  } @else if $p-space == "l-tiny" {
+  } @else if $p_space == "l-tiny" {
     @include rem-fallback("padding", 0 0 0 10px);
-  } @else if $p-space == "pet-card-big" {
+  } @else if $p_space == "pet-card-big" {
     @include rem-fallback("padding", 10px 10px 15px 10px);
-  } @else if $p-space == "pet-card-small" {
+  } @else if $p_space == "pet-card-small" {
     @include rem-fallback("padding", 8px 0 8px 8px);
-  } @else if $p-space == "l-x-small" {
+  } @else if $p_space == "l-x-small" {
     @include rem-fallback("padding", 10px 0 10px 15px);
   }
 }
@@ -356,9 +356,9 @@
     font-size: $font_size_m;
     @include rem-fallback("bottom", 14px);
   } @else if $labeltext == "label-textarea" {
-    font-size: $font-size_m;
+    font-size: $font_size_m;
     @include rem-fallback("top", 53px);
-    @include rem-fallback("left", $space-s);
+    @include rem-fallback("left", $space_s);
   } @else if $labeltext == "label-field-small" {
     font-size: $font_size_s;
     @include rem-fallback("top", 14px);
