--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -2,10 +2,10 @@
   +reset
   position: relative
   font-size: 1.25rem
-  color: $color-black
+  color: $color_black
 
   +e(text-input) > div
-    background: $color-white
+    background: $color_white
     border-radius: $radius_l
 
   input[type="text"]
@@ -26,8 +26,8 @@
   +m(native)
     select
       +reset
-      +rem-fallback('padding-left', $space-xs)
-      +rem-fallback('padding-top', $space-xxs)
+      +rem-fallback('padding-left', $space_xs)
+      +rem-fallback('padding-top', $space_xxs)
       appearance: none
       background-color: transparent
       border: 0
@@ -55,7 +55,7 @@
 
   +e(arrow)
     +rem-fallback('height', 7px)
-    +rem-fallback('margin-top', $space-xxxxs)
+    +rem-fallback('margin-top', $space_xxxxs)
     +rem-fallback('width', 13px)
     border: 7px solid transparent
     border-top: 7px solid #4d4d4d
@@ -64,7 +64,7 @@
     display: inline-block
 
   +e(list)
-    background-color: $color-white
+    background-color: $color_white
     border-radius: 0 0 .375em .375em
     border: 1px solid #dfdfdf
     bottom: auto
@@ -90,7 +90,7 @@
     cursor: pointer
     font-size: 1.25rem
     font-weight: $font_weight_light
-    +rem-fallback('padding', $space-xs)
+    +rem-fallback('padding', $space_xs)
     position: relative
 
     &:hover
@@ -99,7 +99,7 @@
       background-color: rgba(223,223,223,.4)
 
     +is(selected)
-      color: $color-primary
+      color: $color_primary
       font-weight: $font_weight_normal
 
   +e(list-check)
@@ -112,13 +112,13 @@
 
   +m(small)
 
-    .#{$prefix-component}text-field__slot--right
+    .#{$prefix_component}text-field__slot--right
       margin-top: -8px
 
-    .#{$prefix-component}dropdown__list
+    .#{$prefix_component}dropdown__list
       margin-top: -14px
 
-    .#{$prefix-component}dropdown__list-item
+    .#{$prefix_component}dropdown__list-item
       padding: 10px 15px
 
     input:not(:active)
