--- a/src/styles/modules/_m-fieldgroup.sass
+++ b/src/styles/modules/_m-fieldgroup.sass
@@ -3,11 +3,11 @@
   +breakpoint(tablet)
     display: flex
 
-  .#{$prefix-component}button
+  .#{$prefix_component}button
     height: 58px !important
 
   > div, > button
-    margin-bottom: $space-xxs
+    margin-bottom: $space_xxs
 
     +breakpoint(tablet)
       width: 100%
@@ -17,7 +17,7 @@
       label
         top: 15px
 
-      .#{$prefix-component}text-field__input
+      .#{$prefix_component}text-field__input
         border-radius: 0
 
         &:focus
@@ -31,7 +31,7 @@
         border-top-left-radius: $radius_l
         border-bottom-left-radius: $radius_l
 
-        .#{$prefix-component}text-field__input
+        .#{$prefix_component}text-field__input
           border-top-left-radius: $radius_l
           border-bottom-left-radius: $radius_l
 
@@ -39,6 +39,6 @@
         border-top-right-radius: $radius_l
         border-bottom-right-radius: $radius_l
 
-        .#{$prefix-component}text-field__input
+        .#{$prefix_component}text-field__input
           border-top-right-radius: $radius_l
           border-bottom-right-radius: $radius_l
