--- a/src/styles/modules/_m-payment-form.sass
+++ b/src/styles/modules/_m-payment-form.sass
@@ -6,12 +6,12 @@
     color: #9B9B9B
     cursor: pointer
     &:hover
-      color: $color-primary
+      color: $color_primary
       text-decoration: none
     +modifier("active")
       display: inline-block
       +rem-fallback("margin", 0px 10px 30px 0px)
-      color: $color-primary
+      color: $color_primary
       font-weight: bold
       +rem-fallback("border-bottom", 2px solid)
       &:hover
@@ -24,12 +24,12 @@
     color: #9B9B9B
     cursor: pointer
     &:hover
-      color: $color-primary
+      color: $color_primary
       text-decoration: none
     +modifier("active")
       display: inline-block
       +rem-fallback("margin", 0px 10px 30px 10px)
-      color: $color-primary
+      color: $color_primary
       font-weight: bold
       +rem-fallback("border-bottom", 2px solid)
       &:hover
