--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -7,46 +7,46 @@
   +element('item')
     padding: 0
     margin: 0
-    +rem-fallback('margin-top', $space-xs)
+    +rem-fallback('margin-top', $space_xs)
     position: relative
 
   +element('button')
     position: absolute
     visibility: hidden
 
-    &:hover ~ .#{$prefix-component}radio__outside
+    &:hover ~ .#{$prefix_component}radio__outside
       border: 2px solid $color_primary
 
-      &.#{$prefix-component}radio__outside--color-blue
+      &.#{$prefix_component}radio__outside--color-blue
         border: 2px solid $color_white
 
         &::before
           background: $color_white
 
-    &:disabled+.#{$prefix-component}radio__label
+    &:disabled+.#{$prefix_component}radio__label
       color: $color_gray_dark
 
-    &:disabled ~ .#{$prefix-component}radio__outside
+    &:disabled ~ .#{$prefix_component}radio__outside
       &::before
         background: transparent
 
       &:hover
         border: 2px solid $color_primary
 
-      &.#{$prefix-component}radio__outside--color-blue,
-      &.#{$prefix-component}radio__outside--color-grey,
-      &.#{$prefix-component}radio__outside--color-ltgrey
+      &.#{$prefix_component}radio__outside--color-blue,
+      &.#{$prefix_component}radio__outside--color-grey,
+      &.#{$prefix_component}radio__outside--color-ltgrey
         &::before
           background: transparent
 
-    &:disabled+.#{$prefix-component}radio__label--color-blue
-      color: $ablue-light
+    &:disabled+.#{$prefix_component}radio__label--color-blue
+      color: $ablue_light
 
-    &:disabled+.#{$prefix-component}radio__label--color-grey,
-    &:disabled+.#{$prefix-component}radio__label--color-ltgrey
+    &:disabled+.#{$prefix_component}radio__label--color-grey,
+    &:disabled+.#{$prefix_component}radio__label--color-ltgrey
       color: $color_gray_darker
 
-    &:checked ~ .#{$prefix-component}radio__outside
+    &:checked ~ .#{$prefix_component}radio__outside
       border: 2px solid $color_primary
 
       &::before
@@ -54,8 +54,8 @@
         width: 13px
         top: 2px
         left: 2px
-    &:checked ~ .#{$prefix-component}radio__outside--color-blue
-      &.#{$prefix-component}radio__outside
+    &:checked ~ .#{$prefix_component}radio__outside--color-blue
+      &.#{$prefix_component}radio__outside
         border: 2px solid $color_white
 
         &::before
@@ -64,25 +64,25 @@
           top: 2px
           left: 2px
 
-    &:disabled ~ .#{$prefix-component}radio__outside--color-blue
-      &.#{$prefix-component}radio__outside
-        border: 2px solid $ablue-light
+    &:disabled ~ .#{$prefix_component}radio__outside--color-blue
+      &.#{$prefix_component}radio__outside
+        border: 2px solid $ablue_light
 
-    &:disabled ~ .#{$prefix-component}radio__outside--color-grey,
-    &:disabled ~ .#{$prefix-component}radio__outside--color-ltgrey
-      &.#{$prefix-component}radio__outside
+    &:disabled ~ .#{$prefix_component}radio__outside--color-grey,
+    &:disabled ~ .#{$prefix_component}radio__outside--color-ltgrey
+      &.#{$prefix_component}radio__outside
         border: 2px solid $color_gray_darker
 
-    &:disabled ~ .#{$prefix-component}radio__outside--color-white
-      &.#{$prefix-component}radio__outside
+    &:disabled ~ .#{$prefix_component}radio__outside--color-white
+      &.#{$prefix_component}radio__outside
         border: 2px solid $color_gray_dark
 
-    &:checked ~ .#{$prefix-component}radio__outside
+    &:checked ~ .#{$prefix_component}radio__outside
       &::before
         background: $color_primary
 
-    &:checked ~ .#{$prefix-component}radio__outside--color-blue
-      &.#{$prefix-component}radio__outside
+    &:checked ~ .#{$prefix_component}radio__outside--color-blue
+      &.#{$prefix_component}radio__outside
         &::before
           background: $color_white
 
@@ -90,17 +90,17 @@
     +rem-fallback('font-size', $font_size_m)
     +rem-fallback('border-radius', $radius_l)
     +rem-fallback('line-height', $line_height_m_v2)
-    +rem-fallback('padding-left', $space-l)
+    +rem-fallback('padding-left', $space_l)
     +rem-fallback('top', -2px)
     position: relative
-    color: $color-black
+    color: $color_black
     display: inline-block
     font-weight: $font_weight_light
     width: 100%
 
 
     +modifier('blue')
-      color: $color-white
+      color: $color_white
 
   +element('outside')
     display: block
@@ -123,5 +123,5 @@
       margin: auto
 
     &--color-blue
-      &.#{$prefix-component}radio__outside
+      &.#{$prefix_component}radio__outside
         border: 2px solid $color_white
