--- a/src/styles/modules/_m-textlink.sass
+++ b/src/styles/modules/_m-textlink.sass
@@ -7,12 +7,12 @@
     text-decoration: underline
 
   +m(color-blue)
-    color: $color-primary
+    color: $color_primary
 
     +breakpoint(desktop)
       &:hover
         text-decoration: underline
-        color: $color-primary
+        color: $color_primary
 
     &:active
       text-decoration: underline
@@ -24,7 +24,7 @@
     +breakpoint(desktop)
       &:hover
         text-decoration: underline
-        color: $color-primary
+        color: $color_primary
 
       &:active
           text-decoration: underline
