--- a/src/styles/modules/_m-vdivider.sass
+++ b/src/styles/modules/_m-vdivider.sass
@@ -1,6 +1,6 @@
 +b(vdivider)
-  border-top: 1px solid $color_gray_darker
+  +rem-fallback('border-top', 1px solid $color_gray_darker)
   margin-bottom: 40px
 
   +m(type-dashed)
-    border-top: 1px dashed $color_gray_darker
+    +rem-fallback('border-top', 1px dashed $color_gray_darker)
