--- a/src/styles/modules/_m-infobox.sass
+++ b/src/styles/modules/_m-infobox.sass
@@ -14,7 +14,7 @@
     +rem-fallback('margin-top', -$space_xxs)
     margin-left: 24%
     box-sizing: border-box
-    +border(8px solid $color_black)
+    +rem-fallback('border', 8px solid $color_black)
     border-color: transparent transparent $color_gray $color_gray
     transform-origin: 0 0
     transform: rotate(134deg)
