HB-5116: more token substitutions

--- a/src/styles/modules/_m-banner.sass
+++ b/src/styles/modules/_m-banner.sass
@@ -2,7 +2,7 @@
     width: 100%
     z-index: 100000
     position: relative
-    height: 95px
+    +rem-fallback('height', 95px)
     padding-top: 25px
     padding-bottom: 25px
 
