--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -107,8 +107,8 @@
 
     svg
       +reset
-      width: 14px
-      height: 18px
+      +rem-fallback('width', 14px)
+      +rem-fallback('height', 18px)
 
   +m(small)
 
