--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -53,7 +53,7 @@
   +e('close-svg')
     pointer-events: none
 
-@media screen and (max-width: 977px)
+@media screen and (max-+rem-fallback('width', 977px))
   +b('modal-popup')
     background: $color_white
 
