--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -18,7 +18,7 @@
       width: 100%
 
     div.border-bottom
-      height: 25px
+      +rem-fallback('height', 25px)
       position: absolute
       bottom: 0
       left: 0
