--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -70,8 +70,8 @@
       border: 2px solid $color_primary
 
       &::before
-        height: 13px
-        width: 13px
+        +rem-fallback('height', 13px)
+        +rem-fallback('width', 13px)
         top: 2px
         left: 2px
 
@@ -80,8 +80,8 @@
         border: 2px solid $color_white
 
         &::before
-          height: 13px
-          width: 13px
+          +rem-fallback('height', 13px)
+          +rem-fallback('width', 13px)
           top: 2px
           left: 2px
 
@@ -136,8 +136,8 @@
       position: absolute
       content: ''
       border-radius: 100%
-      height: 17px
-      width: 17px
+      +rem-fallback('height', 17px)
+      +rem-fallback('width', 17px)
       top: 0
       left: 0
       margin: auto
