--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -30,7 +30,7 @@
       +rem-fallback('padding-top', $space_xxs)
       appearance: none
       background-color: transparent
-      border: 0
+      +rem-fallback('border', 0)
       // Set color to transparent so TextInput's placeholder won't conflict
       color: transparent
       height: 100%
@@ -57,8 +57,8 @@
     +rem-fallback('height', 7px)
     +rem-fallback('margin-top', $space_xxxxs)
     +rem-fallback('width', 13px)
-    border: 7px solid transparent
-    border-top: 7px solid #4d4d4d
+    +rem-fallback('border', 7px solid transparent)
+    +rem-fallback('border-top', 7px solid #4d4d4d)
     pointer-events: none
     transition: all 300ms ease-in-out
     display: inline-block
@@ -66,7 +66,7 @@
   +e(list)
     background-color: $color_white
     border-radius: 0 0 .375em .375em
-    border: 1px solid #dfdfdf
+    +rem-fallback('border', 1px solid $color_gray_dark)
     bottom: auto
     box-shadow: rgba(0,0,0,.4) 0 1px 3px
     height: auto
@@ -113,13 +113,13 @@
   +m(small)
 
     .#{$prefix_component}text-field__slot--right
-      margin-top: -8px
+      +rem-fallback('margin-top', -8px)
 
     .#{$prefix_component}dropdown__list
-      margin-top: -14px
+      +rem-fallback('margin-top', -14px)
 
     .#{$prefix_component}dropdown__list-item
-      padding: 10px 15px
+     +rem-fallback('padding', 10px $space_xs)
 
     input:not(:active)
-      border: 1px solid $color_gray_light
+      +rem-fallback('border', 1px solid $color_gray_light)
