--- a/src/styles/modules/_m-fieldgroup.sass
+++ b/src/styles/modules/_m-fieldgroup.sass
@@ -15,7 +15,7 @@
       margin-bottom: 0
 
       label
-        top: 15px
+        +rem-fallback('top', $space_xs)
 
       .#{$prefix_component}text-field__input
         border-radius: 0
@@ -28,17 +28,17 @@
         margin-left: -1px
 
       &:first-child
-        border-top-left-radius: $radius_l
-        border-bottom-left-radius: $radius_l
+        +rem-fallback('border-top-left-radius', $radius_l)
+        +rem-fallback('border-bottom-left-radius', $radius_l)
 
         .#{$prefix_component}text-field__input
-          border-top-left-radius: $radius_l
-          border-bottom-left-radius: $radius_l
+          +rem-fallback('border-top-left-radius', $radius_l)
+          +rem-fallback('border-bottom-left-radius', $radius_l)
 
       &:last-child
-        border-top-right-radius: $radius_l
-        border-bottom-right-radius: $radius_l
+        +rem-fallback('border-top-right-radius', $radius_l)
+        +rem-fallback('border-bottom-right-radius', $radius_l)
 
         .#{$prefix_component}text-field__input
-          border-top-right-radius: $radius_l
-          border-bottom-right-radius: $radius_l
+          +rem-fallback('border-top-right-radius', $radius_l)
+          +rem-fallback('border-bottom-right-radius', $radius_l)
