HB-5116: fixed breaking token value

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -30,7 +30,7 @@
       +rem-fallback('padding-top', $space_xxs)
       appearance: none
       background-color: transparent
-      +rem-fallback('border', 0)
+      +rem-fallback('border', none)
       // Set color to transparent so TextInput's placeholder won't conflict
       color: transparent
       height: 100%
